--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,13 @@
 body {
   font-family: sans-serif;
+  color: white;
+  background-color: blue;
+}
+
+.first {
+  background-color: red;
+}
+
+.second {
+  background-color: green;
 }
