--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,95 @@
+* {
+  margin: 0;
+  box-sizing: border-box;
+}
+
 body {
   background-color: #ecf0f1;
-  color: #34495e;
+  color: black;
+  height: 100vh;
+}
+
+.ask-name,
+.bigScreen {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: #fafaf8;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: 600;
+  color: black;
+  font-size: 28px;
+  padding: 0px 20px;
+  text-align: center;
+  line-height: 1.5;
+  z-index: 4;
+}
+
+.form,
+.greetings,
+.ask-name {
+  display: none;
+}
+
+.showing {
+  display: flex;
+}
+
+.container {
+  display: grid;
+  padding: 50px;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+  grid-gap: 10px;
+  width: 100%;
+  height: 100%;
+}
+
+.outter-box {
+  padding: 50px;
+  border-radius: 30px;
+  opacity: 0.95;
+  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.6),
+    0 22px 70px 4px rgba(0, 0, 0, 0.56), 0 0 0 1px rgba(0, 0, 0, 0);
+}
+
+.outter-box:hover {
+  cursor: pointer;
+  opacity: 1;
+}
+
+.things {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  grid-column: 1/3;
+  grid-row: 1/3;
+  background-color: #ececec;
+  z-index: 0;
+}
+
+.date {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  grid-column: 3/6;
+  grid-row: 1;
+}
+
+.toDoList {
+  grid-column: 2/6;
+  grid-row: 2/6;
+  background-color: #fafaf8;
+  z-index: 1;
+
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
 }
 
 .btn {
@@ -11,11 +100,107 @@ body {
   color: #7f8c8d;
 }
 
-.form,
-.greetings {
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.bgImage {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  animation: fadeIn 2s linear;
+}
+
+.input-task {
+  margin-bottom: 20px;
+  grid-row: 1;
+}
+
+.output-task {
+  grid-row: 2/6;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr;
+}
+
+.output-task h2 {
+  margin-bottom: 13px;
+}
+
+.pending {
+  grid-row: 1;
+  grid-column: 1;
+}
+
+.finished {
+  grid-row: 1;
+  grid-column: 2;
+}
+
+.finished ul {
+  color: #9c9ea1;
+  text-decoration: line-through;
+  font-style: italic;
+}
+
+.date {
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+}
+
+.date-title {
+  color: white;
+  background-color: black;
+  opacity: 0.9;
+}
+
+.bigScreen {
   display: none;
 }
 
-.showing {
-  display: block;
+@media screen and (max-width: 1000px) {
+  .bigScreen {
+    display: flex;
+  }
+}
+
+input {
+  margin: 0 auto;
+  bottom: 0px;
+  width: 100%;
+  border-radius: 7px;
+  padding: 20px 20px;
+  width: 80%;
+  border: none;
+  font-size: 14px;
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 8px 16px -8px,
+    rgba(0, 0, 0, 0.024) 0px -6px 16px -6px;
+}
+
+p {
+  font-size: 17px;
+  opacity: 0.7;
+}
+
+.first-input {
+  margin: 10px 0px 20px 0px;
+}
+
+button {
+  background-color: transparent;
+  border: none;
+}
+
+ul {
+  list-style: none;
+  padding-left: 0px;
 }
